@startuml
'https://plantuml.com/class-diagram

class HoaDon{
    # HoaDon(Builder b)
}
class Builder{
    +Builder buildHeader(string hdId, String ngay, String kH)
    + Builder addCTHD(String sp, int sl, int dg, float chietkhau)
    + HoaDon build();
   }
class HoaDonHeaader
class CTHD


Builder ..> HoaDon
HoaDon --> HoaDonHeaader:header
HoaDon *--> CTHD: cthds
Builder --> HoaDonHeaader:header
Builder *--> CTHD: cthds
@enduml